# manipulator_skill_acquisition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
analysis/: README.md  analyze_correlation_velocity_profile.py  analyze_results.py
config_dmp/: discrete.yaml
config_rl/: rl_config.yaml
example/: dmp_load.py
manipulator_skill_acquisition/: __init__.py
manipulator_skill_acquisition/EvalnRunMenu/: error_ang.py  error_ee.py
manipulator_skill_acquisition/SetupMenu/: dmp_generator.py  dmp_generator.py.bak  excel_avg.py  excel_extract.py  fk_human_traj.py  trajectory_mapping.py
manipulator_skill_acquisition/rl/: env_dmp_obstacle.py  env_dmp_obstacle_via_points.py  load_rl.py  nn.py  train_ddpg.py  train_sac.py  train_td3.py
manipulator_skill_acquisition/rl/bak/: AC.py.bak  ActorCriticNN.py.bak  Train.py.bak
manipulator_skill_acquisition/rl/saved_models copy/: sac_actor_EP0.pt  sac_actor_EP1.pt  sac_actor_EP10.pt  sac_actor_EP100.pt  sac_actor_EP101.pt  sac_actor_EP102.pt  sac_actor_EP103.pt  sac_actor_EP104.pt  sac_actor_EP105.pt  sac_actor_EP106.pt  sac_actor_EP107.pt  sac_actor_EP108.pt  sac_actor_EP109.pt  sac_actor_EP11.pt  sac_actor_EP110.pt  sac_actor_EP111.pt  sac_actor_EP112.pt  sac_actor_EP113.pt  sac_actor_EP114.pt  sac_actor_EP115.pt  sac_actor_EP116.pt  sac_actor_EP117.pt  sac_actor_EP118.pt  sac_actor_EP119.pt  sac_actor_EP12.pt  sac_actor_EP120.pt  sac_actor_EP121.pt  sac_actor_EP122.pt  sac_actor_EP123.pt  sac_actor_EP124.pt  sac_actor_EP125.pt  sac_actor_EP126.pt  sac_actor_EP127.pt  sac_actor_EP128.pt  sac_actor_EP129.pt  sac_actor_EP13.pt  sac_actor_EP130.pt  sac_actor_EP131.pt  sac_actor_EP132.pt  sac_actor_EP133.pt  (+442 more)
resources/dmp/: dmp_trajectory.txt  traj1.mpx  traj2.mpx
resources/rl/: EP285_sac.pt  sac_rl_actor_20250501_154157_EP90.pt
(+1350 files in other folders)
