<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_skill_acquisition</name>
  <version>0.0.0</version>
  <description>Skill acquisition package</description>
  <maintainer email="luiscoelho321@hotmail.com">luisc</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>manipulator</depend>

  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
